Remove unused TargetManagement#findByFilterOrderByLinkedDistributionSet
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>